--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "databricks-vscode",
 	"displayName": "Databricks Power Tools",
 	"description": "Run notebooks cell-by-cell, browse and edit your Databricks Workspace, DBFS, Clusters, Jobs, Secrets, Repos and SQL. Supports Azure Databricks, Databricks on AWS and Databricks on GCP.",
-	"version": "1.9.0",
+	"version": "2.0.0",
 	"publisher": "paiqo",
 	"icon": "resources/databricks_extension.png",
 	"author": {
@@ -34,6 +34,7 @@
 		"Azure",
 		"Notebooks",
 		"Data Science",
+		"Machine Learning",
 		"Other"
 	],
 	"keywords": [
@@ -1185,7 +1186,7 @@
 		"process": "^0.11.10",
 		"ts-loader": "^9.3.1",
 		"typescript": "^4.7.4",
-		"webpack": "^5.74.0",
+		"webpack": "^5.76.0",
 		"webpack-cli": "^4.10.0"
 	}
 }
