--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "databricks-vscode",
 	"displayName": "Databricks Power Tools",
 	"description": "Run notebooks cell-by-cell, browse and edit your Databricks Workspace, DBFS, Clusters, Jobs, Secrets, Repos and SQL. Supports Azure Databricks, Databricks on AWS and Databricks on GCP.",
-	"version": "2.0.3",
+	"version": "2.1.0",
 	"publisher": "paiqo",
 	"icon": "resources/databricks_extension.png",
 	"author": {
@@ -1158,7 +1158,25 @@
 					"when": "notebookKernel =~ /^paiqo.databricks-vscode\\// && isWorkspaceTrusted || isWorkspaceTrusted && !notebookKernel"
 				}
 			]
-		}
+		},
+		"notebooks": [
+			{
+				"type": "databricks-notebook",
+				"displayName": "Databricks Notebook",
+				"selector": [
+					{
+						"filenamePattern": "*.sql"
+					},
+					{
+						"filenamePattern": "*.scala"
+					},
+					{
+						"filenamePattern": "*.r"
+					}
+				],
+				"priority": "default"
+			}
+		]
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run package",
