--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "databricks-vscode",
 	"displayName": "Databricks Power Tools",
 	"description": "Run notebooks cell-by-cell, browse and edit your Databricks Workspace, DBFS, Clusters, Jobs, Secrets, Repos and SQL. Supports Azure Databricks, Databricks on AWS and Databricks on GCP.",
-	"version": "2.1.3",
+	"version": "2.2.1",
 	"publisher": "paiqo",
 	"icon": "resources/databricks_extension.png",
 	"author": {
@@ -470,6 +470,11 @@
 			}
 		],
 		"commands": [
+			{
+				"command": "databricksPowerTools.initialize",
+				"title": "Initialize Extension",
+				"category": "Databricks Power Tools"
+			},
 			{
 				"command": "databricksConnections.refresh",
 				"title": "Refresh",
@@ -1152,7 +1157,7 @@
 			"editor/title/run": [
 				{
 					"command": "databricksApi.sendToApi",
-					"when": "resourceExtname == .json || resourceExtname == ''"
+					"when": "resourceExtname == .json || resourceScheme =~ /^untitled$/"
 				}
 			]
 		},
